fix: Adjust minimap size and zoom level for improved visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,9 +100,9 @@ input, textarea, select, button, [contenteditable] {
 }
 
 #minimap {
-    width: 110%;
-    height: 110%;
-    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(32, 32, 32, 0.5);
     /* border: 2px solid #33f; */
     border-radius: 50%;
 }
